--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -242,18 +242,15 @@
     </LinearLayout>
 
 
-    <Button
-        android:layout_marginTop="@dimen/dimen_16dp"
+    <TextView
         android:id="@+id/tv_editorder"
-        android:layout_width="@dimen/dimen_688dp"
-        android:layout_height="@dimen/dimen_80dp"
+        style="@style/zhy_button_submit_1"
         android:layout_below="@+id/ll_change"
         android:layout_centerHorizontal="true"
         android:layout_gravity="bottom"
+        android:layout_marginTop="@dimen/dimen_16dp"
         android:background="@drawable/zhy_button_state_5"
         android:gravity="center"
-        android:text="退出账户"
-        android:textColor="@color/white"
-        android:textSize="@dimen/dimen_24dp" />
+        android:text="退出账户" />
 
 </RelativeLayout>
