--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,9 +33,9 @@
     <color name="search_hint">#ffcccccc</color>
     <color name="h_nov_text">#ff9434</color>
 
-    <color name="blackgroundmain">#467837</color>
+    <color name="blackgroundmain">#6d8780</color>
     <color name="chlickcolor">#f4dc5f</color>
-    <color name="main_blackground">#ECECEC</color>
+    <color name="main_blackground">#F1F6F5</color>
     <color name="cemetery_textcolor">#83e69f</color>
     <color name="zhy_line">#dfdfdf</color>
     <color name="zhy_line_2">#898989</color>
