--- a/app/src/main/res/layout/activity_idea_feedback.xml
+++ b/app/src/main/res/layout/activity_idea_feedback.xml
@@ -31,14 +31,12 @@
         android:textColor="@color/dimgray"
         android:textSize="@dimen/dimen_24dp" />
 
-    <Button
+    <TextView
+        style="@style/zhy_button_submit_1"
+        android:gravity="center"
         android:id="@+id/bt_submit"
-        android:textSize="@dimen/dimen_32dp"
         android:layout_gravity="center_horizontal"
-        android:layout_width="@dimen/dimen_688dp"
-        android:layout_height="@dimen/dimen_80dp"
         android:layout_marginTop="@dimen/dimen_24dp"
         android:background="@drawable/zhy_button_state_5"
-        android:text="提交"
-        android:textColor="@color/white" />
+        android:text="提交" />
 </LinearLayout>
