--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -24,6 +24,23 @@
             android:layout_centerVertical="true"
             android:layout_toRightOf="@+id/tv_back"
             android:src="@drawable/zhy_web_cancel" />
+
+        <ImageView
+            android:id="@+id/iv_collection"
+            android:layout_marginLeft="@dimen/dimen_16dp"
+            android:layout_marginRight="@dimen/dimen_16dp"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true"
+            android:src="@drawable/zhy_find_collection_details_1"
+            android:layout_width="@dimen/dimen_40dp"
+            android:layout_height="match_parent" />
+
+        <ImageView
+            android:layout_toLeftOf="@+id/iv_collection"
+            android:src="@drawable/zhy_find_share"
+            android:id="@+id/iv_share"
+            android:layout_width="@dimen/dimen_40dp"
+            android:layout_height="match_parent"  />
     </RelativeLayout>
 
     <ProgressBar
